--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="hero flex middle-xs" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)), url('img/hero-image.jpg');
-    }">
+        <div class="hero flex middle-xs" style="background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)), url('img/hero-image.jpg');">
     <div class="hero-text ">
         <h1>BeBlack</h1>
         <p>Short for beautiful black. A creative OnePager free to use.</p>
